# my-text-editor

./: CMakeLists.txt
src/: main.c
